@@ -1,3 +1,6 @@
+2006-11-30  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	When editing shape info, have origin be updated when the frame is changed.
+
 2006-11-29  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Updating Keyring mod to incorporate some additions to UCC, as well as a new
 	  sprite and gump for Mariah and several bugfixes.
